# facial-processing-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: detector.rs  error.rs  face_processor.rs  face_processor_trait.rs  lib.rs  system.rs  utils.rs
src/backends/: mod.rs
src/backends/dlib/: README.md  dlib_processor.rs  mod.rs
src/backends/openvtuber/: README.md  face_processor.rs  mod.rs  openvt_processor.rs
src/enumerate_devices/: device.rs  mod.rs  system.rs
src/utils/: eyes.rs  face.rs  macros.rs  misc.rs  mod.rs  mouth.rs
