[package]
name = "facial-processing"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vulkan = ["vulkano"]
opencl = ["cl3"]
openvtuber=["tflite"]
dlib = ["dlib-face-recognition"]

[dependencies]
thiserror = "1.0.24"
getset = "0.1.1"
image = "0.23.14"
ndarray = "0.15.1"
nalgebra = "0.26.1"

[dependencies.vulkano]
version = "0.22.0"
optional = true

[dependencies.cl3]
version = "0.2.1"
optional = true
features = ["CL_VERSION_2_1", "CL_VERSION_2_2"]

[dependencies.tflite]
version = "0.9.5"
optional = true

[dependencies.dlib-face-recognition]
version = "0.1.7"
optional = true

[dependencies.opencv]
version = "0.53.0"
features = ["clang-runtime"] 

[dependencies.cv-convert]
git = "https://github.com/l1npengtul/rust-cv-convert.git"
default-features = false
features = ["opencv-clang-runtime", "nalgebra"]

[build-dependencies]
